[gd_scene load_steps=7 format=3 uid="uid://b3u36ff3xf5pi"]

[ext_resource type="Script" uid="uid://c8j710jwxvccd" path="res://Assets/Scripts/Player_Controller.gd" id="1_0ljjw"]

[sub_resource type="BoxMesh" id="BoxMesh_0ljjw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iof21"]
albedo_color = Color(0.91806, 0.575202, 0.222449, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ucva2"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.4
height = 1.8

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_g2uji"]
length = 0.5

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_0ljjw")
camera_sensitivity = 0.4

[node name="forward" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 1.4000001, -0.8)
mesh = SubResource("BoxMesh_0ljjw")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
material_override = SubResource("StandardMaterial3D_iof21")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ucva2")

[node name="playerCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="cameraGimbal" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 1.3, 0)

[node name="head" type="Node3D" parent="cameraGimbal"]
transform = Transform3D(1, 0, 0, 0, 0.98480785, -0.1736482, 0, 0.1736482, 0.98480785, 0, 0.09848082, 0.01736483)

[node name="RayCast3D" type="RayCast3D" parent="cameraGimbal/head"]
transform = Transform3D(-25, 0, -3.496911e-07, 0, 25, 0, 2.1855694e-06, 0, -4, 0, 1.1920929e-07, -4.4)
target_position = Vector3(0, 0, -1)
debug_shape_thickness = 5

[node name="Camera3D" type="Camera3D" parent="cameraGimbal"]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 0.9000001, 2.6000001)

[node name="stairsCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0.7000001, -0.5)
shape = SubResource("SeparationRayShape3D_g2uji")

[node name="dashCooldown" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="dashDuration" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="dashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="dashDuration" to="." method="_on_dash_duration_timeout"]
